--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="manifest.json" />
-    <title>React App</title>
+    <title>Project Management App</title>
     <!-- CSS Files -->
     <link href="assets/css/material-dashboard.min.css" rel="stylesheet" />
     <!--   Core JS Files   -->
